add favicon, change font, change cursor

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   </head>
   <body>
     <div id="cursor-circle"></div>
@@ -22,14 +23,19 @@
     <main>
       <section class="contact">
         <ul>
-          <li><a href="mailto:hello@annadobrucki.com"> Email</a></li>
-          <li><a href="https://github.com/andobrucki">Github </a></li>
+          <li><a href="mailto:hello@annadobrucki.com">EMAIL</a></li>
+          <li>
+            <a
+              href="https://github.com/andobrucki"
+              target="_blank"
+              rel="noopener noreferrer"
+              >GITHUB</a
+            >
+          </li>
         </ul>
       </section>
     </main>
 
-    <script src="main.js">
-     
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
