disable hover cursor on mobile

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   </head>
   <body>
     <div id="cursor-circle"></div>
+
     <header>
       <h1>Anna Dobrucki</h1>
       <h2>web developer</h2>
     </header>
-
     <main>
       <section class="contact">
         <ul>
