--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anna Dobrucki</title>
+    <title>Anna Dobrucki – Webentwicklerin / Web Developer Berlin</title>
+    <meta
+      name="description"
+      content="Anna Dobrucki: Webentwicklerin & Web Developer in Berlin. Webseiten erstellen mit React, Next.js, Frontend & Webentwicklung. Bilingual: Deutsch & English."
+    />
+    <meta name="author" content="Anna Dobrucki" />
+    <meta name="robots" content="index, follow" />
+
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,11 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
- 
-
     <header>
       <h1>Anna Dobrucki</h1>
       <h2>web developer</h2>
@@ -23,14 +28,8 @@
     <main>
       <section class="contact">
         <ul>
-          <li><a href="mailto:hello@annadobrucki.com">EMAIL</a></li>
           <li>
-            <a
-              href="https://github.com/andobrucki"
-              target="_blank"
-              rel="noopener noreferrer"
-              >GITHUB</a
-            >
+            <a href="mailto:hello@annadobrucki.com">EMAIL</a>
           </li>
         </ul>
       </section>
