--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anna Dobrucki – Webentwicklerin / Web Developer Berlin</title>
+    <title>Anna Dobrucki – Webentwicklerin | Web Developer Berlin</title>
     <meta
       name="description"
-      content="Anna Dobrucki: Webentwicklerin & Web Developer in Berlin. Webseiten erstellen mit React, Next.js, Frontend & Webentwicklung. Bilingual: Deutsch & English."
+      content="Anna Dobrucki: Webentwicklerin & Web Developer in Berlin. Spezialisiert auf React, Next.js & barrierefreies Frontend. ."
     />
     <meta name="author" content="Anna Dobrucki" />
     <meta name="robots" content="index, follow" />
