js encoding for email

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section class="contact">
         <ul>
           <li>
-            <a href="mailto:hello@annadobrucki.com">EMAIL</a>
+            <a href="javascript:sendMail()">EMAIL</a>
           </li>
         </ul>
       </section>
