--- a/index.html
+++ b/index.html
@@ -1,15 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anna Dobrucki – Webentwicklerin | Web Developer Berlin</title>
+    <title>
+      Anna Dobrucki – Webentwicklerin | Web Developer in Berlin | Feminist Web
+      Development
+    </title>
     <meta
       name="description"
-      content="Anna Dobrucki: Webentwicklerin & Web Developer in Berlin. Spezialisiert auf React, Next.js & barrierefreies Frontend. ."
+      content="I build modern websites and web applications using React, Next.js and WordPress, integrating data from APIs and optimizing for performance and SEO. I collaborate with female entrepreneurs, small businesses, artists, and cultural projects."
     />
     <meta name="author" content="Anna Dobrucki" />
     <meta name="robots" content="index, follow" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://annadobrucki.com/" />
+
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Anna Dobrucki – Web Developer in Berlin"
+    />
+    <meta
+      property="og:description"
+      content="I build modern websites and web applications using React, Next.js, and WordPress, integrating data from APIs and optimizing for performance and SEO. I collaborate with female entrepreneurs, small businesses, artists, and cultural projects."
+    />
+    <meta property="og:url" content="https://annadobrucki.com/" />
+    <meta property="og:site_name" content="Anna Dobrucki" />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Anna Dobrucki",
+        "url": "https://annadobrucki.com/",
+        "jobTitle": "Web Developer",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Berlin",
+          "addressCountry": "DE"
+        },
+        "knowsAbout": [
+          "Web Development",
+          "React",
+          "Next.js",
+          "WordPress",
+          "Feminist Web Development",
+          "Frontend Development",
+          "SEO",
+          "Accessibility"
+        ],
+        "memberOf": {
+          "@type": "Organization",
+          "name": "FWD – Feminist Web Development",
+          "url": "https://f-w-d.de/"
+        },
+        "sameAs": ["https://www.instagram.com/xannadox/", "https://f-w-d.de/"]
+      }
+    </script>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,13 +72,16 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <header>
-      <h1>Anna Dobrucki</h1>
-      <h2>web developer</h2>
-    </header>
     <main>
+      <section class="intro">
+        <h1>Anna Dobrucki</h1>
+        <h2>web developer</h2>
+      </section>
       <section class="contact">
         <ul>
+          <li>
+            <a href="https://f-w-d.de">>> FWD</a>
+          </li>
           <li>
             <a href="javascript:sendMail()">EMAIL</a>
           </li>
